Add Comment for haters

--- a/index.html
+++ b/index.html
@@ -1,3 +1,37 @@
+<!-- 
+  ☢️ NUCLEAR ZONE ☢️
+  Agar tu ye padh raha hai,
+  to officially tu inspect element ka addict hai.
+
+  Congratulations 🎉
+  Tu website enjoy karne ke bajay code judge kar raha hai.
+
+  ❌ Disclaimer:
+  - Ye code tutorial se copy nahi hua
+  - Ye "perfect" bhi nahi hai
+  - Ye chal raha hai — aur wahi kaafi hai 😌
+
+  ⚠️ Side Effects:
+  - Zyada dekhne se dimaag ghoom sakta hai
+  - CSS hacks se aankhon me jalan
+  - JS logic se self-doubt
+
+  🤡 Important Notice:
+  Agar tu yahan se code copy karega,
+  to teri website bhi meri jaisi hi dikhegi.
+  Fir tu bolega: "bhai same-same lag rahi hai" 💀
+
+  🙏 Final Warning:
+  Judge kam, learn zyada.
+  Aur haan, GitHub ⭐ dena compulsory hai.
+
+  Ab inspect band kar,
+  scroll kar,
+  aur life me aage badh 😎🔥
+
+  — Aayush Parekh (Mentally Stable, Code Physically)
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
