--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
-                <span class="logo-text">Aayush 👨‍💻</span>
+                <span class="logo-text">Aayush Parekh👨‍💻</span>
                 <span class="logo-dot"></span>
             </a>
             
