--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         
         <div class="scroll-indicator">
             <a href="#about">
-                <span>Scroll Down</span>
+                <span>Scroll Down 👇</span>
                 <i class="fas fa-chevron-down"></i>
             </a>
         </div>
