Add Loading barr issue

--- a/index.html
+++ b/index.html
@@ -47,15 +47,20 @@
 </head>
 <body>
     <!-- Loading Screen -->
-    <div class="loading-screen" id="loadingScreen">
-        <div class="loader">
-            <div class="loader-spinner"></div>
-            <div class="loader-text">Loading Portfolio...</div>
-            <div class="loader-progress">
-                <div class="progress-bar"></div>
-            </div>
+<div class="loading-screen" id="loadingScreen">
+    <div class="loader">
+        <div class="loader-spinner"></div>
+
+        <div class="loader-text">
+            Loading Portfolio...<span class="dots"></span>
+        </div>
+
+        <div class="loader-progress">
+            <div class="progress-bar"></div>
         </div>
     </div>
+</div>
+
 
     <!-- Theme Toggle -->
     <!-- <button class="theme-toggle" id="themeToggle">
